# ChangeLog for net-dns/bind-tools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.141 2009/07/31 21:28:22 tcunha Exp $

  31 Jul 2009; Tiago Cunha <tcunha@gentoo.org> bind-tools-9.4.3_p3.ebuild:
  stable sparc, security bug 279508

  31 Jul 2009; Joseph Jezak <josejx@gentoo.org> bind-tools-9.4.3_p3.ebuild:
  Marked ppc64 stable for bug #279508.

  30 Jul 2009; Markus Meier <maekke@gentoo.org> bind-tools-9.4.3_p3.ebuild:
  amd64 stable, bug #279508

  30 Jul 2009; Joseph Jezak <josejx@gentoo.org> bind-tools-9.4.3_p3.ebuild:
  Marked ppc stable for bug #279508.

*bind-tools-9.5.1_p3 (30 Jul 2009)

  30 Jul 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  -bind-tools-9.5.1_p2.ebuild, +bind-tools-9.5.1_p3.ebuild:
  Version bump

  29 Jul 2009; Markus Meier <maekke@gentoo.org> bind-tools-9.4.3_p3.ebuild:
  x86 stable, bug #279508

  28 Jul 2009; Jeroen Roovers <jer@gentoo.org> bind-tools-9.4.3_p3.ebuild:
  Stable for HPPA (bug #279508).

*bind-tools-9.4.3_p3 (28 Jul 2009)

  28 Jul 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  +bind-tools-9.4.3_p3.ebuild:
  Version bump, #279508

  28 Jul 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  -bind-tools-9.4.2_p2.ebuild, -bind-tools-9.4.3_p1.ebuild,
  -bind-tools-9.6.0_p1.ebuild:
  Cleanup

  26 Jul 2009; Christian Ruppert <idl0r@gentoo.org> bind-tools-9.6.1.ebuild:
  Added missing eautoreconf.

  26 Jul 2009; Christian Ruppert <idl0r@gentoo.org> bind-tools-9.6.1.ebuild,
  +files/bind-tools-9.6.1-parallel.patch:
  Add parallel-build patch, bug 278364 (only a workaround).

*bind-tools-9.6.1 (19 Jul 2009)

  19 Jul 2009; Christian Ruppert <idl0r@gentoo.org>
  +bind-tools-9.6.1.ebuild:
  Version bump to 9.6.1, bug 274494. Added ssl, xml and doc useflag. Fix
  HOMEPAGE. append-flags -D_GNU_SOURCE is not needed anymore since it has
  been fixed by upstream. Cleanup.
