@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/bind-9.4.3_p3.ebuild,v 1.6 2009/07/31 21:23:48 tcunha Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/bind-9.4.3_p3.ebuild,v 1.7 2009/08/01 19:08:41 armin76 Exp $
 
 inherit eutils libtool autotools toolchain-funcs flag-o-matic
 
@@ -14,7 +14,7 @@ SRC_URI="ftp://ftp.isc.org/isc/bind9/${MY_PV}/${PN}-${MY_PV}.tar.gz
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~arm hppa ~ia64 ~mips ppc ppc64 ~s390 ~sh sparc x86"
+KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86"
 IUSE="ssl ipv6 doc dlz postgres berkdb mysql odbc ldap selinux idn threads resolvconf urandom"
 
 DEPEND="ssl? ( >=dev-libs/openssl-0.9.6g )
