@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/bind
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.243 2009/07/31 21:23:48 tcunha Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.244 2009/08/01 19:08:41 armin76 Exp $
+
+  01 Aug 2009; Raúl Porcel <armin76@gentoo.org> bind-9.4.3_p3.ebuild:
+  alpha/arm/ia64/s390/sh stable wrt #279508
 
   31 Jul 2009; Tiago Cunha <tcunha@gentoo.org> bind-9.4.3_p3.ebuild:
   stable sparc, security bug 279508
